Rediseño completo de la interfaz y experiencia de usuario

--- a/public/HTML/Login-Administrador.html
+++ b/public/HTML/Login-Administrador.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <title>Login Administrador - Maxi Despensa</title>
     <link rel="icon" type="image/png" href="/IMG/logo.png">
-    <link rel="stylesheet" href="/CSS/Login Administrador.css">
+    <link rel="stylesheet" href="/CSS/Login-Administrador.css">
 </head>
 <body>
     <a href="index.html" class="back-home">← Volver al Inicio</a>
