--- a/public/HTML/Panel Administracion.html
+++ b/public/HTML/Panel Administracion.html
@@ -21,7 +21,7 @@
             <li><a href="#usuarios" class="nav-link" data-seccion="usuarios">👥 Usuarios</a></li>
             <li><a href="#stock" class="nav-link" data-seccion="stock">📋 Stock</a></li>
             <li><a href="#reportes" class="nav-link" data-seccion="reportes">📈 Reportes</a></li>
-            <li><a href="/HTML/Login Administrador.html" id="logout-btn">🚪 Cerrar Sesión</a></li>
+            <li><a href="/HTML/Login-Administrador.html" id="logout-btn">🚪 Cerrar Sesión</a></li>
         </ul>
     </div>
 
