--- a/public/HTML/index.html
+++ b/public/HTML/index.html
@@ -19,111 +19,92 @@
         </div>
     </div>
     <!--hasta aqui va el estilado (Primer Segmento terminado)-->
-    <header class="barra-principal">
-      <img src="/IMG/banner.png" alt="banner-maxi-despensa" class="banner-maxi"> <img src="/IMG/background-header-desktop___7f36e91bd264dfaa0476c04510b9383a.svg" alt="fondo-maxi-despensa" class="fondo-maxi">
-  <div class="seccion-izquierda">
-    <a href="/HTML/index.html" class="logo-link">
-      <img src="/IMG/logo.png" alt="Maxi Despensa" class="logo">
-      <span class="nombre-empresa">Maxi Despensa
-        <span class="eslogan">Variedad y ahorro en grande</span>
-      </span>
-    </a>
-  </div>
-
-  <div class="seccion-centro">
-    <input type="search" placeholder="Buscar producto..." class="barra-busqueda">
-    <button class="boton-buscar">
-      <img src="/IMG/lupa.png" alt="lupa" class="lupa">
-    </button>
-  </div>
-
-  <div class="seccion-derecha">
-    <div class="icono-favorito popup-container">
-      <img src="/IMG/favorito.png" alt="favorito" class="favorito-png">
-      <span class="nombre-favorito">Favorito</span>
-      <div class="popup contenido-favorito">
-        <h4>Favoritos</h4>
-        <p>No tienes productos favoritos aún.</p>
-      </div>
+   <header class="barra-principal">
+    <div class="plasma-container">
+        <div class="blob"></div>
+        <div class="blob"></div>
+        <div class="blob"></div>
     </div>
 
-    <div class="icono-cuenta popup-container">
-    <img src="/IMG/usuario.png" alt="cuenta" class="cuenta-png">
-    <span class="nombre-usuario">Usuario</span>
+    <div class="contenido-barra">
 
-    <div class="popup contenido-usuario">
-        <!-- Opciones iniciales -->
-        <div class="usuario-opciones">
-            <button class="btn-iniciar">Iniciar Sesión</button>
-            <button class="btn-registrar">Registrarse</button>
+        <div class="seccion-izquierda">
+            <a href="/HTML/index.html" class="logo-link">
+                <img src="/IMG/logo.png" alt="Maxi Despensa" class="logo">
+                <span class="nombre-empresa">Maxi Despensa
+                    <span class="eslogan">Variedad y ahorro en grande</span>
+                </span>
+            </a>
         </div>
-         <!-- Nuevo botón que abre otra página -->
-            <a href="Login Administrador.html" class="btn-admin">Login Administrador</a>
 
+        <div class="seccion-centro">
+            <input type="search" placeholder="Buscar producto..." class="barra-busqueda">
+            <button class="boton-buscar">
+                <img src="/IMG/lupa.png" alt="lupa" class="lupa">
+            </button>
+        </div>
 
-        <!-- Formulario Iniciar Sesión -->
-        <form class="form-iniciar" style="display:none;">
-    <h4>Iniciar Sesión</h4>
-    <input type="email" placeholder="Correo Electrónico" name="email" required>
-    <input type="password" placeholder="Contraseña" name="password" required>
-    <button type="submit">Entrar</button>
-    <p class="volver">← Volver</p>
-</form>
-
-        <!-- Formulario Registrarse -->
-        <form class="form-registrar" style="display:none;">
-    <h4>Registrarse</h4>
-    <input type="text" placeholder="Nombre(s)" name="nombre" required>
-    <input type="text" placeholder="Apellido(s)" name="apellido" required>
-    <input type="email" placeholder="Correo Electrónico" name="email" required>
-    <input type="tel" placeholder="Teléfono (Ej: 2121-2828)" name="telefono">
-    <input type="text" placeholder="Ciudad" name="ciudad">
-    <textarea placeholder="Dirección Completa" name="direccion" rows="2"></textarea>
-    <input type="password" placeholder="Contraseña" name="password" required>
-    <input type="password" placeholder="Confirmar Contraseña" name="password_confirm" required>
-    <button type="submit">Registrarse</button>
-    <p class="volver">← Volver</p>
-</form>
-    </div>
-</div>
-
-
-    <div class="icono-carrito popup-container">
-    <img src="/IMG/carrito.png" alt="carrito" class="carrito-png">
-    <span class="nombre-carrito">Carrito</span>
-    <span class="contador">0</span>
-
-    <div class="popup contenido-carrito">
-        <h4>Tu Carrito</h4>
-
-        <div class="carrito-items">
-            <!-- Cada producto -->
-            <!-- Puedes clonar dinámicamente con JS -->
-            <div class="carrito-item">
-                <img src="/IMG/producto1.png" alt="Producto 1">
-                <div class="info">
-                    <span class="nombre">Producto 1</span>
-                    <span class="cantidad">Cantidad: 1</span>
-                    <span class="precio">$10.00</span>
+        <div class="seccion-derecha">
+            <div class="icono-favorito popup-container">
+                <img src="/IMG/favorito.png" alt="favorito" class="favorito-png">
+                <span class="nombre-favorito">Favorito</span>
+                <div class="popup contenido-favorito">
+                    <h4>Favoritos</h4>
+                    <p>No tienes productos favoritos aún.</p>
                 </div>
-                <button class="eliminar">✕</button>
+            </div>
+
+            <div class="icono-cuenta popup-container">
+                <img src="/IMG/usuario.png" alt="cuenta" class="cuenta-png">
+                <span class="nombre-usuario">Usuario</span>
+                <div class="popup contenido-usuario">
+                    <div class="usuario-opciones">
+                        <button class="btn-iniciar">Iniciar Sesión</button>
+                        <button class="btn-registrar">Registrarse</button>
+                    </div>
+                    <a href="Login-Administrador.html" class="btn-admin">Login Administrador</a>
+
+                    <form class="form-iniciar" style="display:none;">
+                        <h4>Iniciar Sesión</h4>
+                        <input type="email" placeholder="Correo Electrónico" name="email" required>
+                        <input type="password" placeholder="Contraseña" name="password" required>
+                        <button type="submit">Entrar</button>
+                        <p class="volver">← Volver</p>
+                    </form>
+
+                    <form class="form-registrar" style="display:none;">
+                        <h4>Registrarse</h4>
+                        <input type="text" placeholder="Nombre(s)" name="nombre" required>
+                        <input type="text" placeholder="Apellido(s)" name="apellido" required>
+                        <input type="email" placeholder="Correo Electrónico" name="email" required>
+                        <input type="tel" placeholder="Teléfono (Ej: 2121-2828)" name="telefono">
+                        <input type="text" placeholder="Ciudad" name="ciudad">
+                        <textarea placeholder="Dirección Completa" name="direccion" rows="2"></textarea>
+                        <input type="password" placeholder="Contraseña" name="password" required>
+                        <input type="password" placeholder="Confirmar Contraseña" name="password_confirm" required>
+                        <button type="submit">Registrarse</button>
+                        <p class="volver">← Volver</p>
+                    </form>
+                </div>
+            </div>
+
+            <div class="icono-carrito popup-container">
+                <img src="/IMG/carrito.png" alt="carrito" class="carrito-png">
+                <span class="nombre-carrito">Carrito</span>
+                <span class="contador">0</span>
+                <div class="popup contenido-carrito">
+                    </div>
             </div>
         </div>
 
-        <div class="total">
-            <span>Total:</span>
-            <span class="monto">$10.00</span>
-        </div>
-
-        <button class="btn-checkout">Ir al Checkout</button>
-        <p class="vaciar-carrito">Vaciar Carrito</p>
-    </div>
-</div>
-
-  </div>
-</header>
+    </div></header>
     <!---hasta aqui va el estilado (Segundo Segmento terminado)-->
           <!-- Sección de Categorías -->
+    <div class="wave-container">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 180">
+        <path fill="#2c5b36" fill-opacity="1" d="M0,96L80,85.3C160,75,320,53,480,58.7C640,64,800,96,960,106.7C1120,117,1280,107,1360,101.3L1440,96L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path>
+    </svg>
+</div>
     <header class="categorias">
        <h2 class="name-categoria">Categorías</h2>
         <div class="categorias-contenedor"> 
@@ -143,7 +124,7 @@
         </div>
     </header> 
     <div class="marquesina">
-       <p>🌟 Maxi Despensa: ¡Precios bajos todos los días! 🌟</p>
+       <p></p>
     </div> 
     <!--tercer segmento terminado -->
       <div class="fila-promo">
@@ -173,6 +154,7 @@
        </div>
       </div>
       <script src="/JS/inicio.js"></script>
+       <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
       <!--cuarto segmento terminado-->
       <!---aqui va el pie de pagina-->
     <footer class="pie-pagina">
