--- a/public/HTML/Login-Administrador.html
+++ b/public/HTML/Login-Administrador.html
@@ -22,7 +22,7 @@
         <form id="login-form">
             <div class="form-group">
                 <label for="email">Correo Electrónico</label>
-                <input type="email" id="email" name="email" required autocomplete="username" placeholder="admin@maxidespensa.com">
+                <input type="email" id="email" name="email" required autocomplete="username" placeholder="Correo Administrador">
             </div>
             
             <div class="form-group" style="position: relative;">
